# Novi-LLM-Rag

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  replit.md
attached_assets/: Pasted-Vi-si-senior-Python-FastAPI-in-enjer-Refaktori-i-postoje-i-repo-sa-strukturama-kao-u-backend-app--1761420431543_1761420431544.txt  Pasted-Zadatak-Generi-i-potpunu-aplikaciju-pod-nazivom-Multi-RAG-Aplikacija-treba-omogu-iti-korisniku-da--1761388149990_1761388149992.txt
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  chunking.py  embedding.py  generation.py  indexing.py  judge.py  llm_dense_prep.py  mime_detect.py  ocr.py  planner.py  preembed_cleaner.py  rewriter.py  semantic_chunker_agent.py  sql_ingest.py  summarizer.py  tagging_agent.py  text_extract.py  types.py
backend/app/api/: routes_auth.py  routes_chat.py  routes_documents.py  routes_ingest.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  chunk.py  document.py  external_source.py  relation.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  document.py  ingest.py
backend/app/services/: llm_client.py  pipeline.py  prompting.py  rag_pipeline.py  search.py
db/init/: 00_init.sql  01_create_tables.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: main.tsx
frontend/src/components/: AgentSteps.tsx  AgentTrace.tsx  ChatWindow.tsx  FileDropzone.tsx  (+1 more)
(+20 files in other folders)
